Bug #41725: use correct LDAP schema file name
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@78555 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-ldap-acls-master/debian/changelog
+++ b/ucs-school-ldap-acls-master/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-ldap-acls-master (15.0.0-7) unstable; urgency=low
+
+  * Bug #41725: use correct LDAP schema file name
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Fri, 31 Mar 2017 13:33:45 +0200
+
 ucs-school-ldap-acls-master (15.0.0-6) unstable; urgency=low
 
   * Bug #41725: add fix for LDAP ACLs to prevent missing ACLs if
