Bug #41725: grant read access to school slaves to internal attributes of school OUs
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@78598 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-ldap-acls-master/debian/changelog
+++ b/ucs-school-ldap-acls-master/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-ldap-acls-master (15.0.0-8) unstable; urgency=low
+
+  * Bug #41725: grant read access to school slaves to internal attributes of school OUs
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Sun, 02 Apr 2017 22:37:04 +0200
+
 ucs-school-ldap-acls-master (15.0.0-7) unstable; urgency=low
 
   * Bug #41725: use correct LDAP schema file name
