Bug #41725: also compare operational attributes in 78_ldap_acls_dump.diff
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@78636 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (4.0.4-2) unstable; urgency=low
+
+  * Bug #41725: also compare operational attributes in 78_ldap_acls_dump.diff
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Mon, 03 Apr 2017 12:49:19 +0200
+
 ucs-test-ucsschool (4.0.4-1) unstable; urgency=low
 
   * Bug #41725: updated and fixed 75_ldap_acls_* and 78_ldap_acls_dump
