Bug #44249: fix import
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@78656 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (4.0.4-4) unstable; urgency=low
+
+  * Bug #44249: fix import
+
+ -- Daniel Troeder <troeder@univention.de>  Tue, 04 Apr 2017 14:39:53 +0200
+
 ucs-test-ucsschool (4.0.4-3) unstable; urgency=low
 
   * Bug #44253: update module list in 19_available_umc_modules
