--- a/ucs-school-umc-computerroom/debian/changelog
+++ b/ucs-school-umc-computerroom/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-computerroom (9.0.6-7) unstable; urgency=medium
+
+  * Bug #44230: fix presentation start 
+
+ -- Jürn Brodersen <brodersen@univention.de>  Wed, 05 Apr 2017 12:19:33 +0200
+
 ucs-school-umc-computerroom (9.0.6-6) unstable; urgency=medium
 
   * Bug #36789: adjust layout
