--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (4.0.4-7) unstable; urgency=low
+
+  * Bug #44250: squidguard does not leave temporary files anymore
+
+ -- Daniel Troeder <troeder@univention.de>  Wed, 05 Apr 2017 15:39:30 +0200
+
 ucs-test-ucsschool (4.0.4-6) unstable; urgency=low
 
   * Bug #44252: disable test until #44287 is fixed
