Bug #44248: fixed typo in 04_ucs-school-reset-password-check and add reset checks for admins
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@78671 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test-ucsschool (4.0.4-8) unstable; urgency=low
+
+  * Bug #44248: fixed typo in 04_ucs-school-reset-password-check and add
+    reset checks for admins
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Wed, 05 Apr 2017 23:32:01 +0200
+
 ucs-test-ucsschool (4.0.4-7) unstable; urgency=low
 
   * Bug #44250: squidguard does not leave temporary files anymore
