--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test-ucsschool (4.0.4-9) unstable; urgency=low
+
+  * Bug #44256: 17_http_proxy_auth_after_passwd_reset_check:
+    disable password check via basic auth after password reset
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Thu, 06 Apr 2017 13:50:27 +0200
+
 ucs-test-ucsschool (4.0.4-8) unstable; urgency=low
 
   * Bug #44248: fixed typo in 04_ucs-school-reset-password-check and add
