--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (4.0.4-11) unstable; urgency=low
+
+  * Bug #44309: disabled verification of shadowExpire
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Thu, 06 Apr 2017 17:18:07 +0200
+
 ucs-test-ucsschool (4.0.4-10) unstable; urgency=low
 
   * Bug #44254: fix 75_ldap_acls_admin
