Bug #44252: reenable test, as #44287 has been fixed
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@78707 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (4.0.4-12) unstable; urgency=low
+
+  * Bug #44252: reenable test, as #44287 has been fixed
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 10 Apr 2017 10:38:40 +0200
+
 ucs-test-ucsschool (4.0.4-11) unstable; urgency=low
 
   * Bug #44309: disabled verification of shadowExpire
