--- a/ucs-school-umc-exam/debian/changelog
+++ b/ucs-school-umc-exam/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-exam (7.0.3-3) unstable; urgency=medium
+
+  * Bug #44342: fix reboot grid
+
+ -- Jürn Brodersen <brodersen@univention.de>  Mon, 10 Apr 2017 18:20:13 +0200
+
 ucs-school-umc-exam (7.0.3-2) unstable; urgency=low
 
   * Bug #44255: fixed regression when creating exam objects
