--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (4.0.4-13) unstable; urgency=medium
+
+  * Bug #44257: Use master IP in 90_ucsschool/94_samba4_check_shares_access
+
+ -- Arvid Requate <requate@univention.de>  Mon, 10 Apr 2017 21:29:28 +0200
+
 ucs-test-ucsschool (4.0.4-12) unstable; urgency=low
 
   * Bug #44252: reenable test, as #44287 has been fixed
