Bug #44318: use dn from object, as ucsschool lib will have modified it, if the user was moved
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@78719 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-umc-wizards/debian/changelog
+++ b/ucs-school-umc-wizards/debian/changelog
@@ -1,3 +1,10 @@
+ucs-school-umc-wizards (9.0.4-3) unstable; urgency=low
+
+  * Bug #44318: use dn from object, as ucsschool lib will have modified it, if
+    the user was moved
+
+ -- Daniel Troeder <troeder@univention.de>  Tue, 11 Apr 2017 09:26:55 +0200
+
 ucs-school-umc-wizards (9.0.4-2) unstable; urgency=low
 
   * Bug #44318: test if user still exists first, before modifying it
