Bug #44351: fix UMC not removing users from workgroup
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@78816 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-umc-groups/debian/changelog
+++ b/ucs-school-umc-groups/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-groups (7.0.0-4) unstable; urgency=low
+
+  * Bug #44351: fix UMC not removing users from workgroup
+
+ -- Daniel Troeder <troeder@univention.de>  Tue, 18 Apr 2017 15:02:02 +0200
+
 ucs-school-umc-groups (7.0.0-3) unstable; urgency=medium
 
   * Bug #36789: adapt search form to new UMC design
