--- a/ucs-school-umc-groups/debian/changelog
+++ b/ucs-school-umc-groups/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-groups (6.0.4-2) unstable; urgency=low
+
+  * Bug #44350: fix UMC not removing users from workgroup
+
+ -- Daniel Troeder <troeder@univention.de>  Tue, 18 Apr 2017 15:02:02 +0200
+
 ucs-school-umc-groups (6.0.4-1) unstable; urgency=medium
 
   * Bug #42399: use SchoolSanitizer
