--- a/ucs-school-umc-exam/debian/changelog
+++ b/ucs-school-umc-exam/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-exam (7.0.3-4) unstable; urgency=low
+
+  * Bug #44225: run hooks on the master before creating ExamUsers
+
+ -- Daniel Troeder <troeder@univention.de>  Wed, 19 Apr 2017 14:49:51 +0200
+
 ucs-school-umc-exam (7.0.3-3) unstable; urgency=medium
 
   * Bug #44342: fix reboot grid
