--- a/ucs-school-umc-exam/debian/changelog
+++ b/ucs-school-umc-exam/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-exam (6.0.11-2) unstable; urgency=low
+
+  * Bug #44408: run hooks on the master before creating ExamUsers
+
+ -- Daniel Troeder <troeder@univention.de>  Wed, 19 Apr 2017 14:49:51 +0200
+
 ucs-school-umc-exam (6.0.11-1) unstable; urgency=low
 
   * Bug #44073: added ucsschool/exam/group/ldap/blacklist/regex for
