--- a/ucs-school-umc-exam/debian/changelog
+++ b/ucs-school-umc-exam/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-exam (7.0.3-6) unstable; urgency=medium
+
+  * Bug #44109: fix fuzzy i18n
+
+ -- Daniel Troeder <troeder@univention.de>  Thu, 20 Apr 2017 09:56:46 +0200
+
 ucs-school-umc-exam (7.0.3-5) unstable; urgency=low
 
   * Bug #44109: reset computerroom settings after exam has been finished
