--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (4.0.4-14) unstable; urgency=low
+
+  * Bug #44310: wait for group membership to be synced to s4
+
+ -- Daniel Troeder <troeder@univention.de>  Tue, 02 May 2017 16:00:30 +0200
+
 ucs-test-ucsschool (4.0.4-13) unstable; urgency=medium
 
   * Bug #44257: Use master IP in 90_ucsschool/94_samba4_check_shares_access
