--- a/ucs-school-umc-csv-import/debian/changelog
+++ b/ucs-school-umc-csv-import/debian/changelog
@@ -1,3 +1,10 @@
+ucs-school-umc-csv-import (4.0.7-2) unstable; urgency=low
+
+  * Bug #34923: ignore password history/complexity check when modifying
+    existing users
+
+ -- Daniel Troeder <troeder@univention.de>  Wed, 03 May 2017 09:27:53 +0200
+
 ucs-school-umc-csv-import (4.0.7-1) unstable; urgency=medium
 
   * Bug #43577: remove shadow arround inline grids
