Bug #43019: add all exam users to their groups in one go
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@79049 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-umc-exam/debian/changelog
+++ b/ucs-school-umc-exam/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-exam (7.0.3-8) unstable; urgency=low
+
+  * Bug #43019: add all exam users to their groups in one go
+
+ -- Daniel Troeder <troeder@univention.de>  Wed, 03 May 2017 15:24:31 +0200
+
 ucs-school-umc-exam (7.0.3-7) unstable; urgency=low
 
   * Bug #44109: use univention.lib.umc.Client instead of UMCConnection
