Bug #43019: exam users can only gain groups the original users already have
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@79058 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-umc-exam/debian/changelog
+++ b/ucs-school-umc-exam/debian/changelog
@@ -1,3 +1,10 @@
+ucs-school-umc-exam (7.0.3-10) unstable; urgency=low
+
+  * Bug #43019: exam users can only gain groups the original users already
+    have
+
+ -- Daniel Troeder <troeder@univention.de>  Wed, 03 May 2017 17:18:53 +0200
+
 ucs-school-umc-exam (7.0.3-9) unstable; urgency=low
 
   * Bug #43019: add user only to primary group if share access is restricted
