Bug #44310: increase timeout for s4sync wait
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@79066 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (4.0.4-15) unstable; urgency=low
+
+  * Bug #44310: increase timeout for s4sync wait
+
+ -- Daniel Troeder <troeder@univention.de>  Thu, 04 May 2017 09:20:55 +0200
+
 ucs-test-ucsschool (4.0.4-14) unstable; urgency=low
 
   * Bug #44310: wait for group membership to be synced to s4
