Bug #42408: fix typo when calling School.from_binddn()
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@79108 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-lib/debian/changelog
+++ b/ucs-school-lib/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-lib (9.0.32-1) unstable; urgency=medium
+
+  * Bug #42408: fix typo when calling School.from_binddn()
+
+ -- Florian Best <best@univention.de>  Tue, 14 Mar 2017 11:18:21 +0100
+
 ucs-school-lib (9.0.31-1) unstable; urgency=low
 
   * support automatic removal of secondary schools from User objects,
