Bug #44492: remove UCS@school specific terms for branding
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@79109 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-umc-exam/umc/js/de.po
+++ b/ucs-school-umc-exam/umc/js/de.po
@@ -70,12 +70,12 @@ msgstr ""
 
 #: umc/js/schoolexam.js:86
 msgid ""
-"<p>The UCS@school exam mode allows one to perform an exam in a computer "
+"<p>The exam mode allows one to perform an exam in a computer "
 "room. During the exam, access to internet as well as to shares can be "
 "restricted, the student home directories are not accessible, either.</"
 "p><p>Please enter a name for the new exam and specify its end time</p>"
 msgstr ""
-"<p>Der UCS@school-Klassenarbeitsmodus ermöglicht es, eine Klassenarbeit in "
+"<p>Der Klassenarbeitsmodus ermöglicht es, eine Klassenarbeit in "
 "einem Computerraum zu schreiben. Für den Zeitraum der Klassenarbeit kann der "
 "Zugang zum Internet sowie zu Freigaben eingeschränkt werden. Es wird "
 "sichergestellt, dass der Zugriff auf die Heimatverzeichnisse für die Schüler "
