--- a/ucs-school-umc-exam/debian/changelog
+++ b/ucs-school-umc-exam/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-exam (6.0.11-3) unstable; urgency=medium
+
+  * Bug #44492: remove UCS@school specific terms for branding
+
+ -- Florian Best <best@univention.de>  Fri, 05 May 2017 12:47:40 +0200
+
 ucs-school-umc-exam (6.0.11-2) unstable; urgency=low
 
   * Bug #44408: run hooks on the master before creating ExamUsers
