--- a/ucs-school-umc-csv-import/umc/de.po
+++ b/ucs-school-umc-csv-import/umc/de.po
@@ -15,5 +15,5 @@ msgstr ""
 msgid "CSV import"
 msgstr "CSV-Import"
 
-msgid "CSV import of UCS@school users"
+msgid "CSV import of school users"
 msgstr "Benutzerverwaltung für Schulen über CSV-Dateien"
