Bug #44543: remove UCS@school specific terms for branding
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@79113 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-umc-exam/debian/changelog
+++ b/ucs-school-umc-exam/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-exam (7.0.4-1) unstable; urgency=medium
+
+  * Bug #44543: remove UCS@school specific terms for branding
+
+ -- Florian Best <best@univention.de>  Fri, 05 May 2017 13:10:49 +0200
+
 ucs-school-umc-exam (7.0.3-10) unstable; urgency=low
 
   * Bug #43019: exam users can only gain groups the original users already
