Bug #44546: fix an error during removing users from school
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@79116 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-lib/debian/changelog
+++ b/ucs-school-lib/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-lib (10.0.2-1) unstable; urgency=medium
+
+  * Bug #44546: fix an error during removing users from school
+
+ -- Florian Best <best@univention.de>  Fri, 05 May 2017 13:35:31 +0200
+
 ucs-school-lib (10.0.1-3) unstable; urgency=medium
 
   * Bug #42408: fix typo when calling School.from_binddn()
