--- a/ucs-school-lib/debian/changelog
+++ b/ucs-school-lib/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-lib (9.0.33-1) unstable; urgency=medium
+
+  * Bug #41994: fix an error during removing users from school
+
+ -- Florian Best <best@univention.de>  Fri, 05 May 2017 13:39:13 +0200
+
 ucs-school-lib (9.0.32-1) unstable; urgency=medium
 
   * Bug #42408: fix typo when calling School.from_binddn()
