--- a/ucs-school-umc-exam/debian/changelog
+++ b/ucs-school-umc-exam/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-exam (7.0.4-2) unstable; urgency=low
+
+  * Bug #43019: simplify adding exam users to groups
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 08 May 2017 18:42:18 +0200
+
 ucs-school-umc-exam (7.0.4-1) unstable; urgency=medium
 
   * Bug #44543: remove UCS@school specific terms for branding
