--- a/ucs-school-umc-exam/debian/changelog
+++ b/ucs-school-umc-exam/debian/changelog
@@ -1,3 +1,10 @@
+ucs-school-umc-exam (7.0.4-3) unstable; urgency=low
+
+  * Bug #43019: add exam students to all groups regardless of share
+    restrictions
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 08 May 2017 18:49:26 +0200
+
 ucs-school-umc-exam (7.0.4-2) unstable; urgency=low
 
   * Bug #43019: simplify adding exam users to groups
