--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (4.0.4-16) unstable; urgency=low
+
+  * Raise timeouts (Bug #44310).
+
+ -- Daniel Troeder <troeder@univention.de>  Sat, 13 May 2017 15:13:00 +0200
+
 ucs-test-ucsschool (4.0.4-15) unstable; urgency=low
 
   * Bug #44310: increase timeout for s4sync wait
