--- a/ucs-school-l10n-fr/debian/changelog
+++ b/ucs-school-l10n-fr/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-l10n-fr (2.0.0-6) unstable; urgency=medium
+
+  * Bug #43731: update catalogs to current SVN state
+
+ -- Eduard Mai <mai@univention.de>  Tue, 16 May 2017 12:28:56 +0200
+
 ucs-school-l10n-fr (2.0.0-5) unstable; urgency=medium
 
   * Bug #43731: Add po header to ucs-school-ucr-l10n.po 
