Bug #44537: fix removal of users
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@79377 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-umc-wizards/debian/changelog
+++ b/ucs-school-umc-wizards/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-wizards (9.0.4-5) unstable; urgency=medium
+
+  * Bug #44537: fix removal of users
+
+ -- Florian Best <best@univention.de>  Tue, 16 May 2017 17:08:41 +0200
+
 ucs-school-umc-wizards (9.0.4-4) unstable; urgency=low
 
   * Bug #44318: objects DN is None, when ucsschool lib removed it
