--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (4.0.4-17) unstable; urgency=low
+
+  * compare DNs caseinsensitive, raise timeout (Bug #44311).
+
+ -- Daniel Troeder <troeder@univention.de>  Tue, 16 May 2017 17:18:02 +0200
+
 ucs-test-ucsschool (4.0.4-16) unstable; urgency=low
 
   * Raise timeouts (Bug #44310).
