Bug #44588: fix removal of users
merge svn r79377

Conflicts:
	ucs-school-umc-wizards/debian/changelog
	ucs-school-umc-wizards/umc/python/schoolwizards/__init__.py

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@79380 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-umc-wizards/debian/changelog
+++ b/ucs-school-umc-wizards/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-wizards (8.0.1-3) unstable; urgency=medium
+
+  * Bug #44537: fix removal of users
+
+ -- Florian Best <best@univention.de>  Tue, 16 May 2017 17:08:41 +0200
+
 ucs-school-umc-wizards (8.0.1-2) unstable; urgency=low
 
   * Bug #42349: fix regression of last commit: disable sorting of user roles
