Bug #43019: cleanup leftover code
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@79411 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-umc-exam/debian/changelog
+++ b/ucs-school-umc-exam/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-exam (7.0.4-4) unstable; urgency=low
+
+  * Bug #43019: cleanup leftover code
+
+ -- Daniel Troeder <troeder@univention.de>  Thu, 18 May 2017 09:29:51 +0200
+
 ucs-school-umc-exam (7.0.4-3) unstable; urgency=low
 
   * Bug #43019: add exam students to all groups regardless of share
