--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test-ucsschool (4.0.4-18) unstable; urgency=low
+
+  * Bug #44537: add support for multiple schools to test User
+  * check removal of single, primary and secondary schools from User
+
+ -- Daniel Troeder <troeder@univention.de>  Thu, 18 May 2017 15:26:30 +0200
+
 ucs-test-ucsschool (4.0.4-17) unstable; urgency=low
 
   * compare DNs caseinsensitive, raise timeout (Bug #44311).
