* Bug #44588: check removal of single, primary and secondary schools from User
* add support for multiple schools to test User
* check removal of single, primary and secondary schools from User
* adapt to schoolwizards/users/remove API change



git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@79430 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,11 @@
+ucs-test-ucsschool (3.0.17-62) unstable; urgency=low
+
+  * Bug #44588: add support for multiple schools to test User
+  * check removal of single, primary and secondary schools from User
+  * adapt to schoolwizards/users/remove API change
+
+ -- Daniel Troeder <troeder@univention.de>  Thu, 18 May 2017 15:26:30 +0200
+
 ucs-test-ucsschool (3.0.17-61) unstable; urgency=low
 
   * Bug #44248/#40527: fixed typo in 04_ucs-school-reset-password-check and add
