--- a/ucs-school-umc-exam/debian/changelog
+++ b/ucs-school-umc-exam/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-exam (7.0.4-5) unstable; urgency=low
+
+  * Bug #44109: fix exception handling
+
+ -- Daniel Troeder <troeder@univention.de>  Sun, 21 May 2017 11:07:43 +0200
+
 ucs-school-umc-exam (7.0.4-4) unstable; urgency=low
 
   * Bug #43019: cleanup leftover code
