Bug #44350: fix removing to many users (patch by fbest)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@79463 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-umc-groups/debian/changelog
+++ b/ucs-school-umc-groups/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-groups (6.0.4-3) unstable; urgency=low
+
+  * Bug #44350: fix removing to many users (patch by fbest)
+
+ -- Daniel Troeder <troeder@univention.de>  Sun, 21 May 2017 13:36:12 +0200
+
 ucs-school-umc-groups (6.0.4-2) unstable; urgency=low
 
   * Bug #44350: fix UMC not removing users from workgroup
