--- a/ucs-school-umc-wizards/debian/changelog
+++ b/ucs-school-umc-wizards/debian/changelog
@@ -1,3 +1,10 @@
+ucs-school-umc-wizards (8.0.2-1) unstable; urgency=low
+
+  * Bug #44641: add workaround for using admin connections for UMC
+    user/class/computer/school wizards if explicitly enabled
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Sat, 20 May 2017 22:58:20 +0200
+
 ucs-school-umc-wizards (8.0.1-3) unstable; urgency=medium
 
   * Bug #44537: fix removal of users
