Bug #44642: add workaround for using admin connections for UMC CSV import and U@S UMC wizards if explicitly enabled
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@79499 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-umc-csv-import/debian/changelog
+++ b/ucs-school-umc-csv-import/debian/changelog
@@ -1,3 +1,10 @@
+ucs-school-umc-csv-import (4.0.9-1) unstable; urgency=low
+
+  * Bug #44641: add workaround for using admin connections for UMC
+    CSV import if explicitly enabled
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Mon, 22 May 2017 09:39:27 +0200
+
 ucs-school-umc-csv-import (4.0.8-1) unstable; urgency=medium
 
   * Bug #44544: remove UCS@school specific terms for branding
