Bug #44546: only catch ValueError
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@79501 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-lib/debian/changelog
+++ b/ucs-school-lib/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-lib (10.0.2-2) unstable; urgency=medium
+
+  * Bug #44546: only catch ValueError
+
+ -- Florian Best <best@univention.de>  Mon, 22 May 2017 14:24:07 +0200
+
 ucs-school-lib (10.0.2-1) unstable; urgency=medium
 
   * Bug #44546: fix an error during removing users from school
