Bug #41994: catch only ValueError
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@79502 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-lib/debian/changelog
+++ b/ucs-school-lib/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-lib (9.0.33-3) unstable; urgency=medium
+
+  * Bug #41994: catch only ValueError
+
+ -- Florian Best <best@univention.de>  Mon, 22 May 2017 14:25:58 +0200
+
 ucs-school-lib (9.0.33-2) unstable; urgency=medium
 
   * Bug #42408: revert accidental commit
