--- a/ucs-school-umc-wizards/debian/changelog
+++ b/ucs-school-umc-wizards/debian/changelog
@@ -1,3 +1,10 @@
+ucs-school-umc-wizards (9.0.5-2) unstable; urgency=medium
+
+  * Bug #44663: fix default sorting behaviour
+  * Bug #42756: fix class sorting in User(schools) module grid
+
+ -- Jürn Brodersen <brodersen@univention.de>  Tue, 23 May 2017 13:49:47 +0200
+
 ucs-school-umc-wizards (9.0.5-1) unstable; urgency=medium
 
   * Bug #44641: add workaround for using admin connections for UMC
