* Bug #44335: fix sort by date
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@79567 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-umc-printermoderation/debian/changelog
+++ b/ucs-school-umc-printermoderation/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-printermoderation (14.0.3-3) unstable; urgency=medium
+
+  * Bug #44335: fix sort by date
+
+ -- Jürn Brodersen <brodersen@univention.de>  Tue, 23 May 2017 14:30:28 +0200
+
 ucs-school-umc-printermoderation (14.0.3-2) unstable; urgency=medium
 
   * Bug #36789: adapt search form to new UMC design
