Bug #44225: dump AL and start run-parts for pre create hooks only if there are any hooks
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@79603 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-umc-exam/debian/changelog
+++ b/ucs-school-umc-exam/debian/changelog
@@ -1,3 +1,10 @@
+ucs-school-umc-exam (7.0.4-6) unstable; urgency=low
+
+  * Bug #44225: dump AL and start run-parts for pre create hooks only if
+    there are any hooks
+
+ -- Daniel Troeder <troeder@univention.de>  Wed, 24 May 2017 09:33:50 +0200
+
 ucs-school-umc-exam (7.0.4-5) unstable; urgency=low
 
   * Bug #44109: fix exception handling
