--- a/ucs-school-umc-wizards/debian/changelog
+++ b/ucs-school-umc-wizards/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-wizards (9.0.5-3) unstable; urgency=medium
+
+  * Bug #42756: changed sortRepresentation to sortFormatter
+
+ -- Jürn Brodersen <brodersen@univention.de>  Wed, 24 May 2017 09:47:13 +0200
+
 ucs-school-umc-wizards (9.0.5-2) unstable; urgency=medium
 
   * Bug #44663: fix default sorting behaviour
