--- a/ucs-school-umc-printermoderation/debian/changelog
+++ b/ucs-school-umc-printermoderation/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-printermoderation (14.0.3-4) unstable; urgency=medium
+
+  * Bug #44335: changed sortRepresentation to sortFormatter
+
+ -- Jürn Brodersen <brodersen@univention.de>  Wed, 24 May 2017 10:40:39 +0200
+
 ucs-school-umc-printermoderation (14.0.3-3) unstable; urgency=medium
 
   * Bug #44335: fix sort by date
