--- a/ucs-school-umc-exam/debian/changelog
+++ b/ucs-school-umc-exam/debian/changelog
@@ -1,3 +1,10 @@
+ucs-school-umc-exam (7.0.4-7) unstable; urgency=low
+
+  * Bug #44109: move start of progressbar to the successful execution of the
+    request (patch fbest)
+
+ -- Daniel Troeder <troeder@univention.de>  Fri, 26 May 2017 11:42:55 +0200
+
 ucs-school-umc-exam (7.0.4-6) unstable; urgency=low
 
   * Bug #44225: dump AL and start run-parts for pre create hooks only if
