Bug #44698: update missing French translations
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@79701 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-l10n-fr/debian/changelog
+++ b/ucs-school-l10n-fr/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-l10n-fr (2.0.0-7) unstable; urgency=medium
+
+  * Bug #44698: update missing French translations
+
+ -- Alexander Kläser <klaeser@univention.de>  Mon, 29 May 2017 09:10:16 +0200
+
 ucs-school-l10n-fr (2.0.0-6) unstable; urgency=medium
 
   * Bug #43731: update catalogs to current SVN state
