--- a/ucs-school-l10n-fr/fr/ucs-school-umc-helpdesk/modules/univention/admin/handlers/settings/fr.po
+++ b/ucs-school-l10n-fr/fr/ucs-school-umc-helpdesk/modules/univention/admin/handlers/settings/fr.po
@@ -35,8 +35,8 @@ msgstr ""
 "POT-Creation-Date: 2016-10-19 03:18+0200\n"
 "PO-Revision-Date: 2016-07-03 17:11+0100\n"
 "Last-Translator: Éric Bischoff <ebischoff@bureau-cornavin.com>\n"
-"Language-Team: German <fr@bureau-cornavin.com>\n"
-"Language: de\n"
+"Language-Team: French <fr@bureau-cornavin.com>\n"
+"Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
