--- a/ucs-school-l10n-fr/fr/ucs-school-umc-users/umc/python/schoolusers/fr.po
+++ b/ucs-school-l10n-fr/fr/ucs-school-umc-users/umc/python/schoolusers/fr.po
@@ -1,5 +1,3 @@
-# Copyright (C) YEAR ORGANIZATION
-#
 # Nicolas Ternisien <nicolas@bureau-cornavin.com>, 2016.
 msgid ""
 msgstr ""
@@ -12,7 +10,7 @@ msgstr ""
 "Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: ENCODING\n"
+"Content-Transfer-Encoding: 8bit\n"
 "Generated-By: pygettext.py 1.5\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 "X-Generator: Lokalize 1.5\n"
@@ -21,5 +19,3 @@ msgstr ""
 msgid "permission denied"
 msgstr "droit refusé"
 
-#~ msgid "No passwords changed, need a new password."
-#~ msgstr "Aucun mot de passe modifié, un nouveau mot de passe est nécessaire."
