Bug #44225: move PyHook code to ucsschool.lib
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@79711 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-import (15.0.0-4) unstable; urgency=low
+
+  * Bug #44225: move PyHook code to ucsschool.lib
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 29 May 2017 13:46:24 +0200
+
 ucs-school-import (15.0.0-3) unstable; urgency=low
 
   * Bug #44313: fixed import_networks after superordinate changes
