--- a/ucs-school-lib/debian/changelog
+++ b/ucs-school-lib/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-lib (10.0.2-3) unstable; urgency=low
+
+  * Bug #44225: move PyHook code to ucsschool.lib
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 29 May 2017 13:47:05 +0200
+
 ucs-school-lib (10.0.2-2) unstable; urgency=medium
 
   * Bug #44546: only catch ValueError
