--- a/ucs-school-umc-exam/debian/changelog
+++ b/ucs-school-umc-exam/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-exam (7.0.4-8) unstable; urgency=low
+
+  * Bug #44225: run pre-create hooks through ExamUserPyHook interface
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 29 May 2017 13:55:16 +0200
+
 ucs-school-umc-exam (7.0.4-7) unstable; urgency=low
 
   * Bug #44109: move start of progressbar to the successful execution of the
