Bug #44408: move PyHook code to ucsschool.lib
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@79718 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-import (14.0.16-43) unstable; urgency=low
+
+  * Bug #44408: move PyHook code to ucsschool.lib
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 29 May 2017 15:06:30 +0200
+
 ucs-school-import (14.0.16-42) unstable; urgency=low
 
   * Bug #41882: lower memory footprint of import:
