Bug #44225: run pre-create hooks through ExamUserPyHook interface
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@79720 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-umc-exam/debian/changelog
+++ b/ucs-school-umc-exam/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-exam (6.0.11-4) unstable; urgency=low
+
+  * Bug #44225: run pre-create hooks through ExamUserPyHook interface
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 29 May 2017 15:31:11 +0200
+
 ucs-school-umc-exam (6.0.11-3) unstable; urgency=medium
 
   * Bug #44492: remove UCS@school specific terms for branding
