--- a/ucs-school-umc-exam/debian/changelog
+++ b/ucs-school-umc-exam/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-exam (7.0.4-9) unstable; urgency=low
+
+  * Bug #44225: remove leftover from r78833 + r79712
+
+ -- Daniel Troeder <troeder@univention.de>  Tue, 30 May 2017 15:39:31 +0200
+
 ucs-school-umc-exam (7.0.4-8) unstable; urgency=low
 
   * Bug #44225: run pre-create hooks through ExamUserPyHook interface
