--- a/ucs-school-umc-exam/debian/changelog
+++ b/ucs-school-umc-exam/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-exam (6.0.11-5) unstable; urgency=low
+
+  * Bug #44408: remove leftover from r78835 + r79718
+
+ -- Daniel Troeder <troeder@univention.de>  Tue, 30 May 2017 15:42:34 +0200
+
 ucs-school-umc-exam (6.0.11-4) unstable; urgency=low
 
   * Bug #44225: run pre-create hooks through ExamUserPyHook interface
