--- a/ucs-school-umc-computerroom/debian/changelog
+++ b/ucs-school-umc-computerroom/debian/changelog
@@ -1,6 +1,12 @@
+ucs-school-umc-computerroom (9.0.7-1) unstable; urgency=medium
+
+  * Bug #44109: fix unsetting of computerroom settings after exam mode
+
+ -- Florian Best <best@univention.de>  Thu, 01 Jun 2017 12:32:07 +0200
+
 ucs-school-umc-computerroom (9.0.6-7) unstable; urgency=medium
 
-  * Bug #44230: fix presentation start 
+  * Bug #44230: fix presentation start
 
  -- Jürn Brodersen <brodersen@univention.de>  Wed, 05 Apr 2017 12:19:33 +0200
 
