Bug #37840: fix syntax error
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@79977 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-umc-computerroom/debian/changelog
+++ b/ucs-school-umc-computerroom/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-computerroom (9.0.8-1) unstable; urgency=medium
+
+  * Bug #37840: fix syntax error
+
+ -- Florian Best <best@univention.de>  Thu, 01 Jun 2017 13:08:38 +0200
+
 ucs-school-umc-computerroom (9.0.7-1) unstable; urgency=medium
 
   * Bug #44109: fix unsetting of computerroom settings after exam mode
