Bug #43019: fix for case of users not in any OU
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@79982 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-l10n-fr/fr/ucs-school-umc-exam/umc/python/schoolexam-master/fr.po
+++ b/ucs-school-l10n-fr/fr/ucs-school-umc-exam/umc/python/schoolexam-master/fr.po
@@ -77,3 +77,8 @@ msgstr "Étudiant %r non trouvé."
 #, python-format
 msgid "The exam account does already exist for: %s"
 msgstr "Le compte d'examen existe déjà pour : %s."
+
+#: umc/python/schoolexam-master/__init__.py:346
+#, python-format
+msgid "Student %(user_dn)r or exam user not found: %(exc)r."
+msgstr "Étudiant %(user_dn)r ou utilisateur d'examen non trouvé: %(exc)r."
