--- a/ucs-school-l10n-fr/debian/changelog
+++ b/ucs-school-l10n-fr/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-l10n-fr (2.0.0-8) unstable; urgency=low
+
+  * Bug #43019: update translation
+
+ -- Daniel Troeder <troeder@univention.de>  Thu, 01 Jun 2017 14:22:20 +0200
+
 ucs-school-l10n-fr (2.0.0-7) unstable; urgency=medium
 
   * Bug #44698: update missing French translations
