--- a/ucs-school-umc-exam/debian/changelog
+++ b/ucs-school-umc-exam/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-exam (7.0.4-11) unstable; urgency=low
+
+  * Bug #43019: fix for case of users not in any OU
+
+ -- Daniel Troeder <troeder@univention.de>  Thu, 01 Jun 2017 13:57:45 +0200
+
 ucs-school-umc-exam (7.0.4-10) unstable; urgency=medium
 
   * Bug #44109: revert
