--- a/ucs-school-umc-exam/debian/changelog
+++ b/ucs-school-umc-exam/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-exam (7.0.4-12) unstable; urgency=low
+
+  * Bug #44225: fix KeyError if no hook is installed
+
+ -- Daniel Troeder <troeder@univention.de>  Fri, 02 Jun 2017 09:05:08 +0200
+
 ucs-school-umc-exam (7.0.4-11) unstable; urgency=low
 
   * Bug #43019: fix for case of users not in any OU
