--- a/ucs-school-umc-exam/debian/changelog
+++ b/ucs-school-umc-exam/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-exam (6.0.11-6) unstable; urgency=low
+
+  * Bug #44408: fix KeyError if no hook is installed
+
+ -- Daniel Troeder <troeder@univention.de>  Fri, 02 Jun 2017 09:17:12 +0200
+
 ucs-school-umc-exam (6.0.11-5) unstable; urgency=low
 
   * Bug #44408: remove leftover from r78835 + r79718
