--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (4.0.4-19) unstable; urgency=low
+
+  * Bug #44310: wait longer in 70_users_module
+
+ -- Daniel Troeder <troeder@univention.de>  Wed, 14 Jun 2017 14:37:42 +0200
+
 ucs-test-ucsschool (4.0.4-18) unstable; urgency=low
 
   * Bug #44537: add support for multiple schools to test User
