Bug #44310: trigger resync of group object to s4 if membership is not synced
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@80235 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (4.0.4-20) unstable; urgency=low
+
+  * Bug #44310: trigger resync of group object to s4 if membership is not synced
+
+ -- Daniel Troeder <troeder@univention.de>  Fri, 16 Jun 2017 08:16:17 +0200
+
 ucs-test-ucsschool (4.0.4-19) unstable; urgency=low
 
   * Bug #44310: wait longer in 70_users_module
