Bug #44370: add test case 219_import_users_umlauts
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@80400 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (4.0.4-21) unstable; urgency=medium
+
+  * Bug #44370: add test case 219_import_users_umlauts
+
+ -- Florian Best <best@univention.de>  Wed, 21 Jun 2017 19:38:58 +0200
+
 ucs-test-ucsschool (4.0.4-20) unstable; urgency=low
 
   * Bug #44310: trigger resync of group object to s4 if membership is not synced
