Bug #44698: fix umc-common install path
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@80405 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-l10n-fr/debian/changelog
+++ b/ucs-school-l10n-fr/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-l10n-fr (2.0.0-9) unstable; urgency=medium
+
+  * Bug #44698: fix umc-common install path
+
+ -- Eduard Mai <mai@univention.de>  Thu, 22 Jun 2017 11:10:03 +0200
+
 ucs-school-l10n-fr (2.0.0-8) unstable; urgency=low
 
   * Bug #43019: update translation
